--- a/week3/index.html
+++ b/week3/index.html
@@ -1,1 +1,14 @@
-content
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+
+<h1>Test Product</h1>
+<p>Testing notepad ++</p>
+
+</body>
+</html>
+
+
