--- a/week3/index.html
+++ b/week3/index.html
@@ -5,10 +5,9 @@
 </head>
 <body>
 
-<h1>Test Product</h1>
-<p>Testing notepad ++</p>
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
+<p>This is another paragraph.</p>
 
 </body>
 </html>
-
-
