--- a/week3/index.html
+++ b/week3/index.html
@@ -8,6 +8,7 @@
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
 <p>This is another paragraph.</p>
+<h1>I am done with my 3rd lesson</h1>
 
 </body>
 </html>
