--- a/week3/index.html
+++ b/week3/index.html
@@ -8,7 +8,12 @@
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
 <p>This is another paragraph.</p>
-<h1>I am done with my 3rd lesson</h1>
+<h3>I am done with my 3rd lesson</h3>
+<h1>This is heading 1</h1>
+<h2>This is heading 2</h2>
+<h3>This is heading 3</h3>
+<a href="https://www.w3schools.com">This is a link</a>
+<img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142">
 
 </body>
 </html>
