--- a/week3/index.html
+++ b/week3/index.html
@@ -14,6 +14,13 @@
 <h3>This is heading 3</h3>
 <a href="https://www.w3schools.com">This is a link</a>
 <img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142">
+<p>This is a <br> paragraph with a line break.</p>
+<h1>This is heading 1</h1>
+<h2>This is heading 2</h2>
+<h3>This is heading 3</h3>
+<h4>This is heading 1</h4>
+<h5>This is heading 2</h5>
+<h6>This is heading 3</h6>
 
 </body>
 </html>
