--- a/week3/index.html
+++ b/week3/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 <head>
 <title>Page Title</title>
 </head>
@@ -21,6 +21,14 @@
 <h4>This is heading 1</h4>
 <h5>This is heading 2</h5>
 <h6>This is heading 3</h6>
+<a href="https://www.w3schools.com">Visit W3Schools</a>'
+<img src="img_girl.jpg">
+<img src="img_girl.jpg" width="500" height="600">
+<img src="img_girl.jpg" alt="Girl with a jacket">
+<p style="color:red;">This is a red paragraph.</p>
+<p title="I'm a tooltip">This is a paragraph.</p>
+<a href="https://www.w3schools.com/html/">Visit our HTML tutorial</a>
+<p title="John 'ShotGun' Nelson">
 
 </body>
 </html>
