--- a/week3/index.html
+++ b/week3/index.html
@@ -15,6 +15,10 @@
 <a href="https://www.w3schools.com">This is a link</a>
 <img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142">
 <p>This is a <br> paragraph with a line break.</p>
+<!--
+<p>Look at this cool image:</p>
+<img border="0" src="pic_trulli.jpg" alt="Trulli">
+-->
 <h1>This is heading 1</h1>
 <h2>This is heading 2</h2>
 <h3>This is heading 3</h3>
