--- a/week3/index.html
+++ b/week3/index.html
@@ -5,34 +5,8 @@
 </head>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-<p>This is another paragraph.</p>
-<h3>I am done with my 3rd lesson</h3>
-<h1>This is heading 1</h1>
-<h2>This is heading 2</h2>
-<h3>This is heading 3</h3>
-<a href="https://www.w3schools.com">This is a link</a>
-<img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142">
-<p>This is a <br> paragraph with a line break.</p>
-<!--
-<p>Look at this cool image:</p>
-<img border="0" src="pic_trulli.jpg" alt="Trulli">
--->
-<h1>This is heading 1</h1>
-<h2>This is heading 2</h2>
-<h3>This is heading 3</h3>
-<h4>This is heading 1</h4>
-<h5>This is heading 2</h5>
-<h6>This is heading 3</h6>
-<a href="https://www.w3schools.com">Visit W3Schools</a>'
-<img src="img_girl.jpg">
-<img src="img_girl.jpg" width="500" height="600">
-<img src="img_girl.jpg" alt="Girl with a jacket">
-<p style="color:red;">This is a red paragraph.</p>
-<p title="I'm a tooltip">This is a paragraph.</p>
-<a href="https://www.w3schools.com/html/">Visit our HTML tutorial</a>
-<p title="John 'ShotGun' Nelson">
+<h1><b>Jerlyn Camille Pascua's Test Portfolio</b></h1>
+
 
 </body>
 </html>
