--- a/week3/index.html
+++ b/week3/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1 style="text-align:center;font-family:courier;background-color:#FFD9D4"><b>Jerlyn Camille Pascua's Test Portfolio</b></h1>
+<h1 style="text-align:center;font-family:courier;background-color:#FFD9D4"><b><ins>Jerlyn Camille Pascua's Test Portfolio</ins></b></h1>
 <p style="background-color:#CBC3E3;text-align:center;font-family:courier">This page will symbolize as my test website for webprog</p>
 
 
