--- a/week3/index.html
+++ b/week3/index.html
@@ -8,6 +8,24 @@
 <h1 style="text-align:center;font-family:courier;background-color:#FFD9D4"><b><ins>Jerlyn Camille Pascua's Test Portfolio</ins></b></h1>
 <p style="background-color:#CBC3E3;text-align:center;font-family:courier">This page will symbolize as my test website for webprog</p>
 
+<p style="text-align:center;font-family:courier">A short description about me!</p>
+<blockquote cite="http://apcwebprog.csf.ph/~jppascua/"; style="text-align:center;font-family:courier"><small>
+I am a student under Asia Pacific College at my 2nd year as an undergraduate and i am making this test portfolio as partial fulfillment for my course subject WEBPROG.
+<br></br>
+<br></br>
+<li style="text-align:justify">I enjoy coding subjects but sometimes I find it difficult when I lose track on one particular topic</li>
+<br></br>
+<li style="text-align:justify">I went to APC in my Senior High School, I graduated as a STEM student also under Information Tech</li>
+<br></br>
+<li style="text-align:justify">I am an SM scholar having my tuition paid 100%, meaning I dont have to pay for tuition which is great!</li>
+<br></br>
+<li style="text-align:justify">I'm not really a smart person but I am bright in some areas, I have my own unique trait which I really love about myself.</li>
+<br></br>
+<li style="text-align:justify"> I'm 19 years old and will be 20 on 2023!</li>
+<br></br>
+<li style="text-align:justify"> I try to romanticize adulting life to make it bearable, I'm really doing my best to keep myself positive at all times </li>
+</small></blockquote>
+
 
 </body>
 </html>
