--- a/week3/index.html
+++ b/week3/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html>
+
 <head>
-<title>Page Title</title>
+<style>
+body {background-color:#eeebe2;}
+<title>WEBPROG PORTFOLIO</title>
+</style>
 </head>
+
 <body>
 
 <h1 style="text-align:center;font-family:courier;background-color:#FFD9D4"><b><ins>Jerlyn Camille Pascua's Test Portfolio</ins></b></h1>
