--- a/week3/index.html
+++ b/week3/index.html
@@ -29,8 +29,11 @@ I am a student under Asia Pacific College at my 2nd year as an undergraduate and
 <li style="text-align:justify"> I'm 19 years old and will be 20 on 2023!</li>
 <br></br>
 <li style="text-align:justify"> I try to romanticize adulting life to make it bearable, I'm really doing my best to keep myself positive at all times </li>
+<br></br>
+<li style="text-align:justify"> For more information about me, here's a link to my personal profile on <a href="https://www.facebook.com/profile.php?id=100034479443884" target="_blank">Facebook!</a></li>
 </small></blockquote>
-
+<br></br>
+<a href="https://www.facebook.com/profile.php?id=100034479443884"><img src="https://github.com/JerlynPascua/Lab2/blob/main/week3/cutiepie.png" alt="facebook" style="width:42px;height:42px;"></a>
 
 </body>
 </html>
