--- a/week3/index.html
+++ b/week3/index.html
@@ -5,6 +5,13 @@
 <style>
 body {background-color:#eeebe2;}
 <title>WEBPROG PORTFOLIO</title>
+a{
+
+text-align: center;
+
+display: block;
+
+}
 </style>
 </head>
 
