--- a/week3/index.html
+++ b/week3/index.html
@@ -34,7 +34,7 @@ I am a student under Asia Pacific College at my 2nd year as an undergraduate and
 <li style="text-align:justify"> For more information about me, here's a link to my personal profile on <a href="https://www.facebook.com/profile.php?id=100034479443884" target="_blank">Facebook!</a></li>
 </small></blockquote>
 <br></br>
-<p> Press bongo cat for a special surprise! go easy on clicking bongo cat it hurts his ears! </p> <a href="https://www.facebook.com/profile.php?id=100034479443884"><img src="https://github.com/JerlynPascua/Lab2/blob/main/week3/cutiepie.png?raw=true" alt="FACEBOOK" style="width:70px;height:70px;text-align:center;"></a>
+<p style="text-align:center;font-family:courier"> Press bongo cat for a special surprise! go easy on clicking bongo cat it hurts his ears! <a href="https://www.facebook.com/profile.php?id=100034479443884"><img src="https://github.com/JerlynPascua/Lab2/blob/main/week3/cutiepie.png?raw=true" alt="FACEBOOK" style="width:70px;height:70px;text-align:center;"></a></p>
 
 </body>
 </html>
