--- a/week3/index.html
+++ b/week3/index.html
@@ -35,6 +35,7 @@ I am a student under Asia Pacific College at my 2nd year as an undergraduate and
 </small></blockquote>
 <br></br>
 <p style="text-align:center;font-family:courier"> Press bongo cat for a special surprise! go easy on clicking bongo cat it hurts his ears! <a href="https://www.facebook.com/profile.php?id=100034479443884"><img src="https://github.com/JerlynPascua/Lab2/blob/main/week3/cutiepie.png?raw=true" alt="FACEBOOK" style="width:70px;height:70px;text-align:center;"></a></p>
+<p style="text-align:center;font-family:courier">~~~~<br><a href="https://www.facebook.com/profile.php?id=100034479443884"><img src="https://github.com/JerlynPascua/Lab2/blob/main/week3/cutiepie.png?raw=true" alt="FACEBOOK" style="width:70px;height:70px;text-align:center;"></a></br></p><p style="text-align:center;font-family:courier">~~~~</p>
 
 </body>
 </html>
