--- a/week3/index.html
+++ b/week3/index.html
@@ -3,8 +3,11 @@
 
 <head>
 <style>
-body {background-color:#eeebe2;}
+body {
+  background-image: url('https://github.com/JerlynPascua/Lab2/blob/main/week3/starrybg.jpg?raw=true');
+}
 <title>WEBPROG PORTFOLIO</title>
+<link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/JerlynPascua/Lab2/main/week3/pinkcup.ico">
 
 </style>
 </head>
@@ -35,7 +38,7 @@ I am a student under Asia Pacific College at my 2nd year as an undergraduate and
 </small></blockquote>
 <br></br>
 <p style="text-align:center;font-family:courier"> Press bongo cat for a special surprise! go easy on clicking bongo cat it hurts his ears!</p>
-<p style="text-align:center;font-family:courier">~~~~<br><a href="http://apcwebprog.csf.ph/~jppascua/"><img src="https://github.com/JerlynPascua/Lab2/blob/main/week3/cutiepie.png?raw=true" alt="lovelots" style="width:70px;height:70px;text-align:center;"></a></br></p><p style="text-align:center;font-family:courier">~~~~</p>
+<p style="text-align:center;font-family:courier">~~~~<br><a href="http://apcwebprog.csf.ph/~jppascua/"><img src="https://github.com/JerlynPascua/Lab2/blob/main/week3/cutiepie.png?raw=true" alt="" style="width:70px;height:70px;text-align:center;"></a></br></p><p style="text-align:center;font-family:courier">~~~~</p>
 
 </body>
 </html>
