--- a/week3/index.html
+++ b/week3/index.html
@@ -39,6 +39,9 @@ I am a student under Asia Pacific College at my 2nd year as an undergraduate and
 <br></br>
 <p style="text-align:center;font-family:courier"> Press bongo cat for a special surprise! go easy on clicking bongo cat it hurts his ears!</p>
 <p style="text-align:center;font-family:courier">~~~~<br><a href="http://apcwebprog.csf.ph/~jppascua/"><img src="https://github.com/JerlynPascua/Lab2/blob/main/week3/cutiepie.png?raw=true" alt="" style="width:70px;height:70px;text-align:center;"></a></br></p><p style="text-align:center;font-family:courier">~~~~</p>
+<div style="border: 2px solid pink ;font-family:courier;text-align:center;">Little note:<br></br>
+<small>I am no expert when it comes to modifying a website, I am learning as I make this html website so please bear with me, I try to make use of my skills as much as I can</small></div>
+<p style="text-align:center;"><img src="https://github.com/JerlynPascua/Lab2/blob/main/week3/profile2.png?raw=true" alt="profilepicture" width="500" height="500" class = "center"></p>
 
 </body>
 </html>
