--- a/week3/index.html
+++ b/week3/index.html
@@ -6,6 +6,15 @@
 body {
   background-image: url('https://github.com/JerlynPascua/Lab2/blob/main/week3/starrybg.jpg?raw=true');
 }
+.mercy {
+  background-color: #FFDFD3;
+  color: black;
+  border: 2px solid #E0BBE4;
+  margin: 10px;
+  padding: 10px;
+  border-style: dotted;
+  text-align: center;
+}
 <title>WEBPROG PORTFOLIO</title>
 <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/JerlynPascua/Lab2/main/week3/pinkcup.ico">
 
@@ -43,5 +52,13 @@ I am a student under Asia Pacific College at my 2nd year as an undergraduate and
 <small>I am no expert when it comes to modifying a website, I am learning as I make this html website so please bear with me, I try to make use of my skills as much as I can</small></div>
 <p style="text-align:center;"><img src="https://github.com/JerlynPascua/Lab2/blob/main/week3/profile2.png?raw=true" alt="profilepicture" width="500" height="500" class = "center"></p>
 
+<br></br>
+
+<div class = "mercy">
+<h2>Please ignore this part of my website.</h2>
+<p> These are just visual representations for future modifications of my project</p>
+</div>
 </body>
 </html>
+
+
