--- a/week3/index.html
+++ b/week3/index.html
@@ -6,6 +6,15 @@
 body {
   background-image: url('https://github.com/JerlynPascua/Lab2/blob/main/week3/starrybg.jpg?raw=true');
 }
+#myHeader {
+  background-color: lightblue;
+  color: black;
+  border: 2px transparent #E0BBE4;
+  padding: 10px;
+  text-align: center;
+  font-family:courier;
+  border-style: double;
+} 
 .mercy {
   background-color: #FFDFD3;
   color: black;
@@ -14,6 +23,7 @@ body {
   padding: 10px;
   border-style: dotted;
   text-align: center;
+  font-family:courier;
 }
 <title>WEBPROG PORTFOLIO</title>
 <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/JerlynPascua/Lab2/main/week3/pinkcup.ico">
@@ -53,12 +63,13 @@ I am a student under Asia Pacific College at my 2nd year as an undergraduate and
 <p style="text-align:center;"><img src="https://github.com/JerlynPascua/Lab2/blob/main/week3/profile2.png?raw=true" alt="profilepicture" width="500" height="500" class = "center"></p>
 
 <br></br>
-
+  <h1 id="myHeader">Extra content ahead!</h1>
 <div class = "mercy">
 <h2>Please ignore this part of my website.</h2>
 <p> These are just visual representations for future modifications of my project</p>
 </div>
 </body>
 </html>
+
 
 
