--- a/week3/index.html
+++ b/week3/index.html
@@ -71,5 +71,4 @@ I am a student under Asia Pacific College at my 2nd year as an undergraduate and
 </body>
 </html>
 
-
-
+<!-- <img src="https://www.w3schools.com/images/picture.jpg" alt="Mountain"> -->
