--- a/week3/index.html
+++ b/week3/index.html
@@ -25,7 +25,7 @@ body {
   text-align: center;
   font-family:courier;
 }
-<title>WEBPROG PORTFOLIO</title>
+<title>Personal Profile</title>
 <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/JerlynPascua/Lab2/main/week3/pinkcup.ico">
 
 </style>
