--- a/week3/index.html
+++ b/week3/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 * {
   box-sizing: border-box;
@@ -148,7 +148,7 @@ I am a student under Asia Pacific College at my 2nd year as an undergraduate and
   </nav>
   
   <article>
-    <h1>London</h1>
+    <h1>Why is there no content ?</h1>
     <p>as of the moment, there are no listed links or at the least previews of my works, I have not gathered them. This will be writted as future modifications.</p>
   </article>
 </section>
