--- a/week3/index.html
+++ b/week3/index.html
@@ -23,7 +23,7 @@ header {
 /* Create two columns/boxes that floats next to each other */
 nav {
   float: left;
-  width: 30%;
+  width: 50%;
   height: 300px; /* only for demonstration, should be removed */
   background: #B8DBD0;
   padding: 20px;
@@ -44,7 +44,7 @@ nav ul {
 article {
   float: left;
   padding: 20px;
-  width: 70%;
+  width: 50%;
   background-color: #89B2B9;
   height: 300px; /* only for demonstration, should be removed */
     font-size: 20px;
@@ -60,8 +60,15 @@ section::after {
   display: table;
   clear: both;
 }
-
-
+footer {
+  background-color: #A9BD95;
+  padding: 10px;
+  text-align: center;
+  color: white;
+  font-family:courier;
+  border-style: double;
+  border-radius: 20px;
+}
 #myHeader {
   background-color: lightblue;
   color: black;
@@ -133,7 +140,7 @@ I am a student under Asia Pacific College at my 2nd year as an undergraduate and
 </div>
 
 <header>
-  <h2>Cities</h2>
+  <h2>List of Projects!</h2>
 </header>
 
 <section>
@@ -153,6 +160,11 @@ I am a student under Asia Pacific College at my 2nd year as an undergraduate and
   </article>
 </section>
 
+<section>
+<footer>
+<h1>Future modifications are in progress</h1>
+</footer>
+</section>
 
 </body>
 </html>
