--- a/week3/index.html
+++ b/week3/index.html
@@ -156,7 +156,7 @@ I am a student under Asia Pacific College at my 2nd year as an undergraduate and
   
   <article>
     <h1>Why is there no content ?</h1>
-    <p>as of the moment, there are no listed links or at the least previews of my works, I have not gathered them. This will be writted as future modifications.</p>
+    <p>as of the moment, there are no listed links or at the least previews of my works, I have not gathered them. This will be written as future modifications.</p>
   </article>
 </section>
 
@@ -171,3 +171,8 @@ I am a student under Asia Pacific College at my 2nd year as an undergraduate and
 
 
 <!-- <img src="https://www.w3schools.com/images/picture.jpg" alt="Mountain"> -->
+
+<!--&entity_name;
+OR
+
+&#entity_number; -->
