--- a/week3/index.html
+++ b/week3/index.html
@@ -176,3 +176,5 @@ I am a student under Asia Pacific College at my 2nd year as an undergraduate and
 OR
 
 &#entity_number; -->
+
+<!-- I forgot to commit a lesson oopsie, ignore this -->
