--- a/week3/index.html
+++ b/week3/index.html
@@ -166,6 +166,8 @@ I am a student under Asia Pacific College at my 2nd year as an undergraduate and
 </footer>
 </section>
 
+<p style="background-color:#CBC3E3;text-align:center;font-family:courier;border:2px solid white;border-radius: 20px;">I am open for commission &#x20B1;50</p>
+
 </body>
 </html>
 
