--- a/week3/index.html
+++ b/week3/index.html
@@ -103,7 +103,7 @@ footer {
 
 <body>
 
-<h1 style="text-align:center;font-family:courier;background-color:#FFD9D4;border:2px solid white;border-radius: 20px;padding:15px"><b><ins>Jerlyn Camille Pascua's Test Portfolio</ins></b></h1>
+<h1 style="text-align:center;font-family:courier;background-color:#FFD9D4;border:2px solid white;border-radius: 20px;padding:15px"><b><ins>&#128151;Jerlyn Camille Pascua's Test Portfolio&#128151;</ins></b></h1>
 <p style="background-color:#CBC3E3;text-align:center;font-family:courier;border:2px solid white;border-radius: 20px;">This page will symbolize as my test website for webprog</p>
 
 <p style="text-align:center;font-family:courier">A short description about me!</p>
@@ -166,7 +166,7 @@ I am a student under Asia Pacific College at my 2nd year as an undergraduate and
 </footer>
 </section>
 
-<p style="background-color:#CBC3E3;text-align:center;font-family:courier;border:2px solid white;border-radius: 20px;">I am open for commission &#x20B1;50</p>
+<p style="background-color:#CBC3E3;text-align:center;font-family:courier;border:2px solid white;border-radius: 20px;">&#x1f97a; I am open for commission &#x20B1;50 &#x1f97a;</p>
 
 </body>
 </html>
@@ -180,3 +180,4 @@ OR
 &#entity_number; -->
 
 <!-- I forgot to commit a lesson oopsie, ignore this -->
+
