--- a/week3/index.html
+++ b/week3/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 * {
@@ -181,3 +182,4 @@ OR
 
 <!-- I forgot to commit a lesson oopsie, ignore this -->
 
+<!-- scheme://prefix.domain:port/path/filename -->
