--- a/week3/index.html
+++ b/week3/index.html
@@ -182,4 +182,6 @@ OR
 
 <!-- I forgot to commit a lesson oopsie, ignore this -->
 
-<!-- scheme://prefix.domain:port/path/filename -->
+<!-- <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
+"http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"> -->
