--- a/week3/index.html
+++ b/week3/index.html
@@ -91,6 +91,16 @@ footer {
   font-family:courier;
   border-radius: 20px;
 }
+.box {
+    width: 800px;
+    background: #F5D7DA;
+    border-radius: 10%;
+    padding: 20px;
+    text-align: center;
+    margin: auto;
+    margin-top: 3%;
+    color: black;
+    {
 @media (max-width: 600px) {
   nav, article {
     width: 100%;
@@ -107,7 +117,9 @@ footer {
 <h1 style="text-align:center;font-family:courier;background-color:#FFD9D4;border:2px solid white;border-radius: 20px;padding:15px"><b><ins>&#128151;Jerlyn Camille Pascua's Test Portfolio&#128151;</ins></b></h1>
 <p style="background-color:#CBC3E3;text-align:center;font-family:courier;border:2px solid white;border-radius: 20px;">This page will symbolize as my test website for webprog</p>
 
+
 <p style="text-align:center;font-family:courier">A short description about me!</p>
+<div class = box>
 <blockquote cite="http://apcwebprog.csf.ph/~jppascua/"; style="text-align:center;font-family:courier"><small>
 I am a student under Asia Pacific College at my 2nd year as an undergraduate and i am making this test portfolio as partial fulfillment for my course subject WEBPROG.
 <br></br>
@@ -126,9 +138,22 @@ I am a student under Asia Pacific College at my 2nd year as an undergraduate and
 <br></br>
 <li style="text-align:justify"> For more information about me, here's a link to my personal profile on <a href="https://www.facebook.com/profile.php?id=100034479443884" target="_blank">Facebook!</a></li>
 </small></blockquote>
+</div>
 <br></br>
 <p style="text-align:center;font-family:courier"> Press bongo cat for a special surprise! go easy on clicking bongo cat it hurts his ears!</p>
-<p style="text-align:center;font-family:courier">~~~~<br><a href="http://apcwebprog.csf.ph/~jppascua/" target="_blank"><img src="https://github.com/JerlynPascua/Lab2/blob/main/week3/cutiepie.png?raw=true" alt="" style="width:70px;height:70px;text-align:center;"></a></br></p><p style="text-align:center;font-family:courier">~~~~</p>
+
+<p style="text-align:center;font-family:courier">~~~~<br>
+
+<a href="http://apcwebprog.csf.ph/~jppascua/" target="_blank"><img src="https://github.com/JerlynPascua/Lab2/blob/main/week3/cutiepie.png?raw=true" alt="" style="width:70px;height:70px;text-align:center;"></a><nobr>
+
+</nobr><a href="http://apcwebprog.csf.ph/~jppascua/" target="_blank"><img src="https://github.com/JerlynPascua/Lab2/blob/main/week3/cutiepie2.png?raw=true" alt="" style="width:70px;height:70px;text-align:center;"></a><nobr>
+
+</nobr><a href="http://apcwebprog.csf.ph/~jppascua/" target="_blank"><img src="https://github.com/JerlynPascua/Lab2/blob/main/week3/cutiepie.png?raw=true" alt="" style="width:70px;height:70px;text-align:center;"></a>
+</br></p>
+
+<p style="text-align:center;font-family:courier">~~~~</p>
+
+
 <div style="border: 2px solid pink ;font-family:courier;text-align:center;">Little note:<br></br>
 <small>I am no expert when it comes to modifying a website, I am learning as I make this html website so please bear with me, I try to make use of my skills as much as I can</small></div>
 <p style="text-align:center;"><img src="https://github.com/JerlynPascua/Lab2/blob/main/week3/profile2.png?raw=true" alt="profilepicture" width="500" height="500" class = "center"></p>
@@ -185,3 +210,5 @@ OR
 <!-- <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
 "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"> -->
+
+
