--- a/week3/index.html
+++ b/week3/index.html
@@ -140,11 +140,27 @@ I am a student under Asia Pacific College at my 2nd year as an undergraduate and
 </small></blockquote>
 </div>
 <br></br>
-<p style="text-align:center;font-family:courier"> Press bongo cat for a special surprise! go easy on clicking bongo cat it hurts his ears!</p>
+<p style="text-align:center;font-family:courier"> Press bongo cat for a special surprise! go easy on clicking bongo cat it hurts his ears! also you can play music there, its one of my fav songs!</p>
 
 <p style="text-align:center;font-family:courier">~~~~<br>
 
 <a href="http://apcwebprog.csf.ph/~jppascua/" target="_blank"><img src="https://github.com/JerlynPascua/Lab2/blob/main/week3/cutiepie.png?raw=true" alt="" style="width:70px;height:70px;text-align:center;"></a><nobr>
+
+</nobr><a href="http://apcwebprog.csf.ph/~jppascua/" target="_blank"><img src="https://github.com/JerlynPascua/Lab2/blob/main/week3/cutiepie2.png?raw=true" alt="" style="width:70px;height:70px;text-align:center;"></a><nobr>
+
+</nobr><a href="http://apcwebprog.csf.ph/~jppascua/" target="_blank"><img src="https://github.com/JerlynPascua/Lab2/blob/main/week3/cutiepie.png?raw=true" alt="" style="width:70px;height:70px;text-align:center;"></a>
+</br></p>
+
+<div align="center">
+<audio controls>
+  <source src="https://raw.githubusercontent.com/JerlynPascua/Lab2/main/week3/SONGV1.ogg" type="audio/ogg">
+  <source src="https://raw.githubusercontent.com/JerlynPascua/Lab2/main/week3/SONGV2.mpeg" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+</audio>
+</div>
+
+<p style="text-align:center;"><a href="http://apcwebprog.csf.ph/~jppascua/" target="_blank"><img src="https://github.com/JerlynPascua/Lab2/blob/main/week3/cutiepie.png?raw=true" alt="" style="width:70px;height:70px;text-align:center;"></a><nobr>
 
 </nobr><a href="http://apcwebprog.csf.ph/~jppascua/" target="_blank"><img src="https://github.com/JerlynPascua/Lab2/blob/main/week3/cutiepie2.png?raw=true" alt="" style="width:70px;height:70px;text-align:center;"></a><nobr>
 
@@ -210,5 +226,6 @@ OR
 <!-- <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
 "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"> -->
+
 
 
