--- a/week3/index.html
+++ b/week3/index.html
@@ -159,6 +159,8 @@ Your browser does not support the audio element.
 </audio>
 </audio>
 </div>
+<br></br>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1OCEbAQoq9x6xKBfxbePKM?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
 <p style="text-align:center;"><a href="http://apcwebprog.csf.ph/~jppascua/" target="_blank"><img src="https://github.com/JerlynPascua/Lab2/blob/main/week3/cutiepie.png?raw=true" alt="" style="width:70px;height:70px;text-align:center;"></a><nobr>
 
@@ -226,6 +228,5 @@ OR
 <!-- <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
 "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"> -->
-
 
 
