--- a/week3/index.html
+++ b/week3/index.html
@@ -159,8 +159,6 @@ Your browser does not support the audio element.
 </audio>
 </audio>
 </div>
-<br></br>
-<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1OCEbAQoq9x6xKBfxbePKM?utm_source=generator" width="100%" height="700" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
 <p style="text-align:center;"><a href="http://apcwebprog.csf.ph/~jppascua/" target="_blank"><img src="https://github.com/JerlynPascua/Lab2/blob/main/week3/cutiepie.png?raw=true" alt="" style="width:70px;height:70px;text-align:center;"></a><nobr>
 
@@ -209,6 +207,9 @@ Your browser does not support the audio element.
 <h1>Future modifications are in progress</h1>
 </footer>
 </section>
+<br></br>
+<p style="text-align:center;font-family:courier"><b>Here's my short spotify playlist!</b></p>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1OCEbAQoq9x6xKBfxbePKM?utm_source=generator" width="100%" height="700" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
 <p style="background-color:#CBC3E3;text-align:center;font-family:courier;border:2px solid white;border-radius: 20px;">&#x1f97a; I am open for commission &#x20B1;50 &#x1f97a;</p>
 
