--- a/week3/index.html
+++ b/week3/index.html
@@ -34,6 +34,7 @@ nav {
   font-family:courier;
   border-style: double;
   border-radius: 20px;
+  overflow: auto;
 }
 
 /* Style the list inside the menu */
@@ -53,6 +54,7 @@ article {
   font-family:courier;
   border-style: double;
   border-radius: 20px;
+  overflow: auto;
 }
 
 /* Clear floats after the columns */
@@ -69,6 +71,18 @@ footer {
   font-family:courier;
   border-style: double;
   border-radius: 20px;
+}
+div.scroll {
+  height: 500px;
+  overflow: auto;
+  width: 700px;
+  background: #F5D7DA;
+  border-radius: 10%;
+  padding: 20px;
+  text-align: center;
+  margin: auto;
+  margin-top: 3%;
+  color: black;
 }
 #myHeader {
   background-color: lightblue;
@@ -101,6 +115,7 @@ footer {
     margin-top: 3%;
     color: black;
     {
+ 
 @media (max-width: 600px) {
   nav, article {
     width: 100%;
@@ -208,8 +223,146 @@ Your browser does not support the audio element.
 </footer>
 </section>
 <br></br>
+
+
+<div align="center">
+			<div class = "mercy">
+<h2>here's my playlist for people with no spotify premium!</h2>
+			</div>
+	<div class="scroll">
+	<div align="center">
+<audio controls>
+  <source src="https://raw.githubusercontent.com/JerlynPascua/Lab2/main/week3/Blackpink Shutdown.ogg" type="audio/ogg">
+Your browser does not support the audio element.
+</audio>
+<nobr></nobr>
+<h3 style="font-family:courier"><b>Blackpink - Shutdown</b></h3>
+
+<br></br>
+
+<audio controls>
+  <source src="https://raw.githubusercontent.com/JerlynPascua/Lab2/main/week3/Blackpink Typa Girl.ogg" type="audio/ogg">
+Your browser does not support the audio element.
+</audio>
+<nobr></nobr>
+<h3 style="font-family:courier"><b>Blackpink - Typa Girl</b></h3>
+
+<br></br>
+
+
+<audio controls>
+  <source src="https://raw.githubusercontent.com/JerlynPascua/Lab2/main/week3/G-idle-Alone.ogg" type="audio/ogg">
+Your browser does not support the audio element.
+</audio>
+<nobr></nobr>
+<h3 style="font-family:courier"><b>G-IDLE - Alone</b></h3>
+
+<br></br>
+
+
+<audio controls>
+  <source src="https://raw.githubusercontent.com/JerlynPascua/Lab2/main/week3/G-idle-MyBag.ogg" type="audio/ogg">
+Your browser does not support the audio element.
+</audio>
+<nobr></nobr>
+<h3 style="font-family:courier"><b>G-IDLE - My Bag</b></h3>
+
+<br></br>
+
+
+<audio controls>
+  <source src="https://raw.githubusercontent.com/JerlynPascua/Lab2/main/week3/G-idle-Nude.ogg" type="audio/ogg">
+Your browser does not support the audio element.
+</audio>
+<nobr></nobr>
+<h3 style="font-family:courier"><b>G-IDLE - Nxde</b></h3>
+
+<br></br>
+
+
+<audio controls>
+  <source src="https://raw.githubusercontent.com/JerlynPascua/Lab2/main/week3/Le-Sserafim-Antifragile.ogg" type="audio/ogg">
+Your browser does not support the audio element.
+</audio>
+<nobr></nobr>
+<h3 style="font-family:courier"><b>LE SSerafim - Antifragile</b></h3>
+
+<br></br>
+
+
+<audio controls>
+  <source src="https://raw.githubusercontent.com/JerlynPascua/Lab2/main/week3/Le-Sserafim-Blue-Flame.ogg" type="audio/ogg">
+Your browser does not support the audio element.
+</audio>
+<nobr></nobr>
+<h3 style="font-family:courier"><b>LE SSerafim - Blue Flame</b></h3>
+
+<br></br>
+
+
+<audio controls>
+  <source src="https://raw.githubusercontent.com/JerlynPascua/Lab2/main/week3/Le-Sserafim-Fearless.ogg" type="audio/ogg">
+Your browser does not support the audio element.
+</audio>
+<nobr></nobr>
+<h3 style="font-family:courier"><b>LE SSerafim - Fearless</b></h3>
+
+<br></br>
+
+
+<audio controls>
+  <source src="https://raw.githubusercontent.com/JerlynPascua/Lab2/main/week3/Le-Sserafim-Impurities.ogg" type="audio/ogg">
+Your browser does not support the audio element.
+</audio>
+<nobr></nobr>
+<h3 style="font-family:courier"><b>LE SSerafim - Impurities</b></h3>
+
+<br></br>
+
+<audio controls>
+  <source src="https://raw.githubusercontent.com/JerlynPascua/Lab2/main/week3/Le-Sserafim-Impurities.ogg" type="audio/ogg">
+Your browser does not support the audio element.
+</audio>
+<nobr></nobr>
+<h3 style="font-family:courier"><b>NewJeans - Attention</b></h3>
+
+<br></br>
+
+<audio controls>
+  <source src="https://raw.githubusercontent.com/JerlynPascua/Lab2/main/week3/NewJeans_Cookie.ogg" type="audio/ogg">
+Your browser does not support the audio element.
+</audio>
+<nobr></nobr>
+<h3 style="font-family:courier"><b>NewJeans - Cookie</b></h3>
+
+<br></br>
+
+<audio controls>
+  <source src="https://raw.githubusercontent.com/JerlynPascua/Lab2/main/week3/NewJeans_Hurt.ogg" type="audio/ogg">
+Your browser does not support the audio element.
+</audio>
+<nobr></nobr>
+<h3 style="font-family:courier"><b>NewJeans - Hurt</b></h3>
+
+<br></br>
+
+<audio controls>
+  <source src="https://raw.githubusercontent.com/JerlynPascua/Lab2/main/week3/NewJeans_Hype_Boy.ogg.ogg" type="audio/ogg">
+Your browser does not support the audio element.
+</audio>
+<nobr></nobr>
+<h3 style="font-family:courier"><b>NewJeans - Hype Boy</b></h3>
+
+<br></br>
+
+
+
+	</div>
+	</div>
+</div>
+
 <p style="text-align:center;font-family:courier"><b>Here's my short spotify playlist!</b></p>
-<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1OCEbAQoq9x6xKBfxbePKM?utm_source=generator" width="100%" height="700" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1OCEbAQoq9x6xKBfxbePKM?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
 <p style="background-color:#CBC3E3;text-align:center;font-family:courier;border:2px solid white;border-radius: 20px;">&#x1f97a; I am open for commission &#x20B1;50 &#x1f97a;</p>
 
