--- a/week3/index.html
+++ b/week3/index.html
@@ -75,10 +75,10 @@ footer {
 div.scroll {
   height: 500px;
   overflow: auto;
-  width: 700px;
+  width: 900px;
   background: #F5D7DA;
-  border-radius: 10%;
-  padding: 20px;
+  border-radius: 15%;
+  padding: 10px;
   text-align: center;
   margin: auto;
   margin-top: 3%;
@@ -361,7 +361,7 @@ Your browser does not support the audio element.
 	</div>
 </div>
 
-<p style="text-align:center;font-family:courier"><b>Here's my short spotify playlist!</b></p>
+<p style="text-align:center;font-family:courier"><b>Here's a short preview of my spotify playlist!</b></p>
 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1OCEbAQoq9x6xKBfxbePKM?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
 <p style="background-color:#CBC3E3;text-align:center;font-family:courier;border:2px solid white;border-radius: 20px;">&#x1f97a; I am open for commission &#x20B1;50 &#x1f97a;</p>
