--- a/week3/index.html
+++ b/week3/index.html
@@ -383,4 +383,5 @@ OR
 "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"> -->
 
-<!-- first lesson bg commit done-->
+<!-- first lesson bg commit done
+1.2 lesson done-->
