W3 School CSS Lesson 1.3

--- a/week3/index.html
+++ b/week3/index.html
@@ -384,4 +384,5 @@ OR
 <html xmlns="http://www.w3.org/1999/xhtml"> -->
 
 <!-- first lesson bg commit done
-1.2 lesson done-->
+1.2 lesson done
+1.3 lesson done-->
