--- a/week3/index.html
+++ b/week3/index.html
@@ -385,7 +385,10 @@ OR
 "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"> -->
 
-<!-- first lesson bg commit done
+<!-- 
+css first lesson bg commit done
 1.2 lesson done
 1.3 lesson done
-1.4 lesson done-->
+1.4 lesson done
+1.5 lesson done
+1.6 lesson done-->
