--- a/week3/index.html
+++ b/week3/index.html
@@ -391,4 +391,5 @@ css first lesson bg commit done
 1.3 lesson done
 1.4 lesson done
 1.5 lesson done
-1.6 lesson done-->
+1.6 lesson done
+2.1 done-->
