W3 School CSS Lesson 4.3

--- a/week3/index.html
+++ b/week3/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia&effect=neon|outline|emboss|shadow-multiple">
 <style>
 * {
   box-sizing: border-box;
@@ -131,7 +132,7 @@ div.scroll {
 
 <body>
 
-<h1 style="text-align:center;font-family:courier;background-color:#FFD9D4;border:2px solid white;border-radius: 20px;padding:15px"><b><ins>&#128151;Jerlyn Camille Pascua's Test Portfolio&#128151;</ins></b></h1>
+<h1 class="font-effect-shadow-multiple" style="text-align:center;font-family:courier;background-color:#FFD9D4;border:2px solid white;border-radius: 20px;padding:15px"><b><ins>&#128151;Jerlyn Camille Pascua's Test Portfolio&#128151;</ins></b></h1>
 <p style="background-color:#CBC3E3;text-align:center;font-family:courier;border:2px solid white;border-radius: 20px;">This page will symbolize as my test website for webprog</p>
 
 
@@ -205,7 +206,7 @@ Your browser does not support the audio element.
 <section>
   <nav>
     <ul>
-      <li>not yet listed</li>
+      <li><a href="https://jappytoktok.w3spaces.com/">TOKTOK Shop Link! (WIP)</a></li>
       <li>not yet listed</li>
       <li>not yet listed</li>
       <li>not yet listed</li>
@@ -215,7 +216,7 @@ Your browser does not support the audio element.
   
   <article>
     <h1>Why is there no content ?</h1>
-    <p>as of the moment, there are no listed links or at the least previews of my works, I have not gathered them. This will be written as future modifications.</p>
+    <p>as of the moment, there is one link listed out of all my workd, I have not gathered them also note that the shop is noted as a work in progress. This will be written as future modifications.</p>
   </article>
 </section>
 
