Updated resource page + resource content

--- a/week5/index.html
+++ b/week5/index.html
@@ -85,7 +85,7 @@
                           <a href="javascript:void(0)">Pages</a>
                           <ul class="sub-menu">
                               <li><a href="about.html">Playlist</a></li>
-                              <li><a href="faqs.html">More</a></li>
+                              <li><a href="resources.html">More</a></li>
                           </ul>
                       </li>
                       <li class="scroll-to-section"><a href="#infos">Infos</a></li>
