--- a/week5/about.html
+++ b/week5/about.html
@@ -86,7 +86,7 @@
                           <a href="javascript:void(0)">Pages</a>
                           <ul class="sub-menu">
                               <li><a href="about.html">Playlist</a></li>
-                              <li><a href="faqs.html">More</a></li>
+                              <li><a href="resources.html">More</a></li>
                           </ul>
                       </li>
                       <li><a href="index.html">Infos</a></li>
