--- a/week5/resources.html
+++ b/week5/resources.html
@@ -92,7 +92,7 @@ https://templatemo.com/tm-582-tale-seo-agency
                           <a href="javascript:void(0)">Pages</a>
                           <ul class="sub-menu">
                               <li><a href="about.html">Playlist</a></li>
-                              <li><a href="faqs.html">More</a></li>
+                              <li><a href="resources.html">More</a></li>
                           </ul>
                       </li>
                       <li><a href="index.html">Infos</a></li>
@@ -117,7 +117,8 @@ https://templatemo.com/tm-582-tale-seo-agency
             <h6>Jerlyn Camille Pascua</h6>
 			<h6>BSIT MI 211</h6>
             <div class="line-dec"></div>
-            <h4>What <em>More</em> do you need <em>?</em></h4>
+            <h4>My list of <em>Resources</em> and <em>Guides</em></h4>
+			<p>All rights reserved to the mentioned groups</p>
           </div>
         </div>
         <div class="col-lg-5">
@@ -131,33 +132,33 @@ https://templatemo.com/tm-582-tale-seo-agency
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <h2>Information and thoughts!</h2>
+          <h2><em>Information</em> and <em>preferences!</em></h2>
         </div>
         <div class="col-lg-12">
           <div class="steps">
             <div class="row">
               <div class="col-lg-3">
                 <div class="item">
-                  <img src="assets/images/services-01.jpg" alt="" style="max-width: 66px; border-radius: 50%; margin: 0 auto;">
-                  <h4>I go to school at Asia Pacific College</h4>
+                  <img src="assets/images/heartbase.png" alt="" style="max-width: 66px; border-radius: 50%; margin: 0 auto;">
+                  <h4>Recommended web 1</h4>
                 </div>
               </div>
               <div class="col-lg-3">
                 <div class="item">
-                  <img src="assets/images/services-02.jpg" alt="" style="max-width: 66px; border-radius: 50%; margin: 0 auto;">
-                  <h4>Asia Pacific College is related to National University</h4>
+                  <img src="assets/images/flowerbase.png" alt="" style="max-width: 66px; border-radius: 50%; margin: 0 auto;">
+                  <h4>Recommended web 2</h4>
                 </div>
               </div>
               <div class="col-lg-3">
                 <div class="item">
-                  <img src="assets/images/services-03.jpg" alt="" style="max-width: 66px; border-radius: 50%; margin: 0 auto;">
-                  <h4>I wish to learn more about website making</h4>
+                  <img src="assets/images/makeupbase.png" alt="" style="max-width: 66px; border-radius: 50%; margin: 0 auto;">
+                  <h4>Recommended web 3</h4>
                 </div>
               </div>
               <div class="col-lg-3">
                 <div class="item last-item">
-                  <img src="assets/images/services-04.jpg" alt="" style="max-width: 66px; border-radius: 50%; margin: 0 auto;">
-                  <h4>I hope to build connections of information through website</h4>
+                  <img src="assets/images/sunbase.png" alt="" style="max-width: 66px; border-radius: 50%; margin: 0 auto;">
+                  <h4>Recommended web 4</h4>
                 </div>
               </div>
             </div>
@@ -172,9 +173,9 @@ https://templatemo.com/tm-582-tale-seo-agency
       <div class="row">
         <div class="col-lg-12">
           <div class="section-heading">
-            <h2>Most <em>Frequently</em> Asked <span>Questions</span> ?</h2>
+            <h2>Here are my <em>Resources</em> and <span>Guides</span> in creating my website</h2>
             <div class="line-dec"></div>
-            <p>I dont Know ? </p>
+            <p>Credits to the creators! </p>
           </div>
         </div>
       </div>
@@ -183,53 +184,53 @@ https://templatemo.com/tm-582-tale-seo-agency
           <div class="accordions is-first-expanded">
             <article class="accordion">
               <div class="accordion-head">
-                  <span>More Slot 1</span>
+                  <span>TEMPLATE WEBSITE</span>
                   <span class="icon">
                       <i class="icon fa fa-chevron-right"></i>
                   </span>
               </div>
               <div class="accordion-body">
                   <div class="content">
-                      <p>More information slot 1 - <a href="index.html">Home</a>, <a href="about.html">About</a>, and <a href="faqs.html">FAQ</a>.</p>
+                      <p>SEO company, all rights reserved. Template.IO - <a href="index.html">Home</a>, <a href="about.html">About</a>, and <a href="faqs.html">FAQ</a>.</p>
                   </div>
               </div>
           </article>
           <article class="accordion">
             <div class="accordion-head">
-                <span>More Slot 2</span>
+                <span>W3 SCHOOL HTML</span>
                 <span class="icon">
                     <i class="icon fa fa-chevron-right"></i>
                 </span>
             </div>
             <div class="accordion-body">
                 <div class="content">
-                    <p>More information slot 2</p>
+                    <p>all the included lessons in HTML W3 School Course</p>
                 </div>
             </div>
           </article>
           <article class="accordion">
             <div class="accordion-head">
-                <span>More slot 3</span>
+                <span>W3 SCHOOL CSS</span>
                 <span class="icon">
                     <i class="icon fa fa-chevron-right"></i>
                 </span>
             </div>
             <div class="accordion-body">
                 <div class="content">
-                    <p>More information slot 3</p>
+                    <p>all the included lessons in CSS W3 School Course</p>
                 </div>
             </div>
           </article>
           <article class="accordion">
             <div class="accordion-head">
-                <span>More slot 5</span>
+                <span>W3 SCHOOL JAVASCRIPT</span>
                 <span class="icon">
                     <i class="icon fa fa-chevron-right"></i>
                 </span>
             </div>
             <div class="accordion-body">
                 <div class="content">
-                  <p>more information slot 5 </p>
+                  <p>all the included lessons in JS W3 School Course</p>
                 </div>
             </div>
           </article>
